--- a/public/watch.html
+++ b/public/watch.html
@@ -1,6 +1,19 @@
 <!doctype html>
 <html lang="en">
 <head>
+<script>
+(function(){
+  var ok = ['kixonair.com','www.kixonair.com'];
+  try {
+    if (!ok.includes(location.hostname)) {
+      location.replace('https://kixonair.com');
+    }
+  } catch(e){}
+})();
+</script>
+<link rel="canonical" href="https://kixonair.com/"/>
+
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#0b0f14" />
