--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,28 @@
   } catch(e){}
 })();
 </script>
+
+<!-- 🔐 Auto-inject API key for /api requests -->
+<script src="/secure-fetch.js"></script>
+
 <link rel="canonical" href="https://kixonair.com/"/>
+
+<meta name="theme-color" content="#0b0f14">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="theme-color" content="#0b0f14" />
+<title>Kixonair — Live Sports Schedule</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="/styles.css?v=21" />
+<link rel="icon" href="/logo.svg" type="image/svg+xml" />
+<link rel="stylesheet" href="/scoreless.css">
+</head>
+
 
 
   <meta name="theme-color" content="#0b0f14">
