--- a/public/watch.html
+++ b/public/watch.html
@@ -1,56 +1,48 @@
 <!doctype html>
 <html lang="en">
 <head>
-<script>
-(function(){
-  var ok = ['kixonair.com','www.kixonair.com'];
-  try {
-    if (!ok.includes(location.hostname)) {
-      location.replace('https://kixonair.com');
-    }
-  } catch(e){}
-})();
-</script>
-<link rel="canonical" href="https://kixonair.com/"/>
-
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<meta name="theme-color" content="#0b0f14" />
-<title>Kixonair — Match Center</title>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="/styles.css?v=30" />
-<link rel="icon" href="/logo.svg" type="image/svg+xml" />
-<style>
-  :root{ --pad: clamp(12px, 3vw, 22px); }
-  .wrap{max-width:980px;margin:0 auto;padding:var(--pad)}
-  .headerbar{display:grid;grid-template-columns:auto 1fr auto;align-items:center;margin-bottom:10px}
-  .headerbar .center{justify-self:center;}
-  .badge{display:inline-block;border:1px solid #2a2f37;border-radius:999px;padding:4px 10px;font-size:12px;max-width:50vw;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
-  .teams{display:grid;grid-template-columns:1fr auto 1fr;gap:14px;align-items:center;justify-items:center;margin:10px 0 4px}
-  .side{display:flex;flex-direction:column;align-items:center;gap:8px;text-align:center}
-  .side img{width:clamp(56px,14vw,84px);height:clamp(56px,14vw,84px);object-fit:contain}
-  .teamName{font-size:clamp(16px,4.5vw,22px);font-weight:700;line-height:1.2}
-  .h1{font-size:clamp(22px,8vw,34px);font-weight:900;text-align:center;letter-spacing:.06em}
-  .muted{opacity:.78}
-  .statusBig{margin-top:6px;margin-bottom:2px;text-align:center}
-  .meta{display:grid;grid-template-columns:repeat(3,minmax(0,1fr));gap:12px;margin:14px 0}
-  @media(max-width:720px){ .meta{grid-template-columns:repeat(2,minmax(0,1fr));} }
-  .serverbar{ display:flex; flex-wrap:wrap; gap:10px; justify-content:center; margin:12px 0 4px; }
-  .serverbar .sbtn{ display:inline-flex; align-items:center; justify-content:center; min-width:110px;
-    border:1px solid #2a2f37; border-radius:12px; padding:10px 14px; text-decoration:none; color:#cbd5e1 }
-  .serverbar .sbtn:hover{ background:#121821 }
-  .loading{position:fixed;inset:0;display:flex;flex-direction:column;align-items:center;justify-content:center;background:rgba(3,8,14,.78);backdrop-filter:saturate(120%) blur(3px);z-index:50;transition:opacity .25s ease}
-  .loading.hidden{opacity:0;pointer-events:none}
-  .spinner{position:relative;width:74px;height:74px;margin-bottom:10px}
-  .ring{position:absolute;inset:0;border-radius:50%;border:4px solid rgba(255,255,255,.14);border-top-color:rgba(255,255,255,.6);animation:spin 1s linear infinite}
-  .dot{position:absolute;top:50%;left:50%;width:14px;height:14px;background:#22c55e;border-radius:50%;transform:translate(-50%,-50%);animation:pulse 1.2s ease-in-out infinite}
-  .loadingText{font-size:14px;opacity:.9}
-  @keyframes spin{to{transform:rotate(360deg)}}
-  @keyframes pulse{0%,100%{transform:translate(-50%,-50%) scale(.85);opacity:.85}50%{transform:translate(-50%,-50%) scale(1.12);opacity:1}}
-  @media(max-width:600px){ #leagueBadge{display:none} }
-</style>
+  <script>
+    // redirect away from mirrors (optional; keep if you want)
+    (function () {
+      var ok = ['kixonair.com', 'www.kixonair.com'];
+      try { if (!ok.includes(location.hostname)) location.replace('https://kixonair.com'); } catch (e) {}
+    })();
+  </script>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#0b0f14" />
+  <title>Kixonair — Match Center</title>
+  <link rel="stylesheet" href="/styles.css?v=31" />
+  <link rel="icon" href="/logo.svg" type="image/svg+xml" />
+  <style>
+    :root{ --pad: clamp(12px, 3vw, 22px); }
+    .wrap{max-width:980px;margin:0 auto;padding:var(--pad)}
+    .headerbar{display:grid;grid-template-columns:auto 1fr auto;align-items:center;margin-bottom:10px}
+    .headerbar .center{justify-self:center;}
+    .badge{display:inline-block;border:1px solid #2a2f37;border-radius:999px;padding:4px 10px;font-size:12px;max-width:50vw;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
+    .teams{display:grid;grid-template-columns:1fr auto 1fr;gap:14px;align-items:center;justify-items:center;margin:10px 0 4px}
+    .side{display:flex;flex-direction:column;align-items:center;gap:8px;text-align:center}
+    .side img{width:clamp(56px,14vw,84px);height:clamp(56px,14vw,84px);object-fit:contain}
+    .teamName{font-size:clamp(16px,4.5vw,22px);font-weight:700;line-height:1.2}
+    .h1{font-size:clamp(22px,8vw,34px);font-weight:900;text-align:center;letter-spacing:.06em}
+    .muted{opacity:.78}
+    .statusBig{margin-top:6px;margin-bottom:2px;text-align:center}
+    .meta{display:grid;grid-template-columns:repeat(3,minmax(0,1fr));gap:12px;margin:14px 0}
+    @media(max-width:720px){ .meta{grid-template-columns:repeat(2,minmax(0,1fr));} }
+    .serverbar{ display:flex; flex-wrap:wrap; gap:10px; justify-content:center; margin:12px 0 4px; }
+    .serverbar .sbtn{ display:inline-flex; align-items:center; justify-content:center; min-width:110px;
+      border:1px solid #2a2f37; border-radius:12px; padding:10px 14px; text-decoration:none; color:#cbd5e1 }
+    .serverbar .sbtn:hover{ background:#121821 }
+    .loading{position:fixed;inset:0;display:flex;flex-direction:column;align-items:center;justify-content:center;background:rgba(3,8,14,.78);backdrop-filter:saturate(120%) blur(3px);z-index:50;transition:opacity .25s ease}
+    .loading.hidden{opacity:0;pointer-events:none}
+    .spinner{position:relative;width:74px;height:74px;margin-bottom:10px}
+    .ring{position:absolute;inset:0;border-radius:50%;border:4px solid rgba(255,255,255,.14);border-top-color:rgba(255,255,255,.6);animation:spin 1s linear infinite}
+    .dot{position:absolute;top:50%;left:50%;width:14px;height:14px;background:#22c55e;border-radius:50%;transform:translate(-50%,-50%);animation:pulse 1.2s ease-in-out infinite}
+    .loadingText{font-size:14px;opacity:.9}
+    @keyframes spin{to{transform:rotate(360deg)}}
+    @keyframes pulse{0%,100%{transform:translate(-50%,-50%) scale(.85);opacity:.85}50%{transform:translate(-50%,-50%) scale(1.12);opacity:1}}
+    @media(max-width:600px){ #leagueBadge{display:none} }
+  </style>
 </head>
 <body>
 <header class="header">
@@ -89,12 +81,27 @@
 </main>
 
 <script>
+  // ======== CONFIG ========
+  // put your API key here (from your server ENV)
+  const API_KEY = 'kix-7d29f2d9ef3c4';
+  const API_BASE = './api';
+
+  // central fetch helper: adds API key, includes cookies, keeps options override-able
+  function apiFetch(url, init = {}) {
+    const headers = Object.assign({}, init.headers || {}, {
+      'API_key': API_KEY,   // your custom name
+      'X-API-Key': API_KEY  // also send a standard header, harmless if unused
+    });
+    return fetch(url, Object.assign({ credentials: 'include' }, init, { headers }));
+  }
+
+  // ======== UI helpers ========
   let __loadFailTimer = null;
-  function hideLoading(){ try{ document.getElementById('loadingOverlay').classList.add('hidden'); }catch{} if(__loadFailTimer){clearTimeout(__loadFailTimer);__loadFailTimer=null;} }
+  const $ = id => document.getElementById(id);
+  function hideLoading(){ try{ $('loadingOverlay').classList.add('hidden'); }catch{} if(__loadFailTimer){clearTimeout(__loadFailTimer);__loadFailTimer=null;} }
   function qs(name){ return new URLSearchParams(location.search).get(name) || ''; }
   function slug(s){ return String(s||'').toLowerCase().replace(/[^a-z0-9]+/g,'-').replace(/(^-|-$)/g,''); }
   function capWords(s){ return String(s||'').split(/[-\s]+/).map(w => w? w[0].toUpperCase()+w.slice(1):'').join(' '); }
-  const $ = id => document.getElementById(id);
 
   function renderServerButtonsFromSlug(sl){
     const bar = $('serverBar'); if (!bar) return;
@@ -108,6 +115,7 @@
     renderServerButtonsFromSlug(sl);
   }
 
+  // prefill names from slug in URL so UI looks alive even before data lands
   (function prime(){
     const id = qs('id');
     if (id && id.includes('@')){
@@ -121,17 +129,21 @@
     }
   })();
 
-  async function fixturesFor(dateStr){
-    const r = await fetch('./api/fixtures?date=' + encodeURIComponent(dateStr), {cache:'no-store', credentials:'include'}).catch(()=>null);
-    const j = r ? await r.json().catch(()=>null) : null;
-    return Array.isArray(j?.fixtures) ? j.fixtures : [];
-  }
+  // ======== date helpers ========
   function ymdFromIso(x){ try{ return String(x||'').slice(0,10) || null; }catch{return null;} }
   function addDays(dateStr, delta){
     const dt = new Date(Date.UTC(+dateStr.slice(0,4), +dateStr.slice(5,7)-1, +dateStr.slice(8,10)));
     dt.setUTCDate(dt.getUTCDate()+delta);
     return dt.toISOString().slice(0,10);
   }
+
+  // ======== API helpers ========
+  async function fixturesFor(dateStr){
+    const r = await apiFetch(`${API_BASE}/fixtures?date=${encodeURIComponent(dateStr)}`, { cache: 'no-store' }).catch(() => null);
+    const j = r ? await r.json().catch(() => null) : null;
+    return Array.isArray(j?.fixtures) ? j.f ixtures : [];
+  }
+
   function tokens(name){
     const s = slug(name); const parts = s.split('-').filter(Boolean);
     const first = parts[0] || s, last = parts[parts.length-1] || s;
@@ -176,16 +188,16 @@
   }
 
   async function load(){
-    document.getElementById('loadingOverlay').classList.remove('hidden');
+    $('loadingOverlay').classList.remove('hidden');
     __loadFailTimer = setTimeout(hideLoading, 3000);
 
-    const id  = qs('id');
+    const id  = qs('id'); // URLSearchParams decodes %40 → @, %3A → :
     if (!id){ $('statusLine').textContent='Missing match id'; hideLoading(); return; }
 
     async function serverResolve(){
       try{
-        const r = await fetch('./api/fixture/' + encodeURIComponent(id), {credentials:'include'});
-        if (r.ok){ const j = await r.json(); return j.fixture || null; }
+        const r = await apiFetch(`${API_BASE}/fixture/${encodeURIComponent(id)}`);
+        if (r.ok){ const j = await r.json().catch(()=>null); return j?.fixture || null; }
       }catch{}
       return null;
     }
@@ -194,7 +206,8 @@
       const slugPart = slug(hasAt ? id.split('@')[0] : id);
       const isoHint  = hasAt ? id.split('@')[1] : null;
       const base = ymdFromIso(isoHint) || new Date().toISOString().slice(0,10);
-      const days = [addDays(base,-1), base, addDays(base,1), addDays(base,2)];
+      // search ±2 days just in case timezones shifted
+      const days = [addDays(base,-2), addDays(base,-1), base, addDays(base,1), addDays(base,2)];
       for (const d of days){
         const list = await fixturesFor(d);
         const hit = list.find(fx => matchSlug(slugPart, fx));
