--- a/public/watch.html
+++ b/public/watch.html
@@ -1,27 +1,18 @@
 <!doctype html>
 <html lang="en">
 <head>
-<script>
-(function(){
-  var ok = ['kixonair.com','www.kixonair.com'];
-  try {
-    if (!ok.includes(location.hostname)) {
-      location.replace('https://kixonair.com');
-    }
-  } catch(e){}
-})();
-</script>
-<link rel="canonical" href="https://kixonair.com/"/>
-
-
+  <script>
+    // optional redirect guard (keep/remove as you like)
+    (function () {
+      var ok = ['kixonair.com', 'www.kixonair.com'];
+      try { if (!ok.includes(location.hostname)) location.replace('https://kixonair.com'); } catch (e) {}
+    })();
+  </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#0b0f14" />
   <title>Kixonair — Match Center</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/styles.css?v=30" />
+  <link rel="stylesheet" href="/styles.css?v=33" />
   <link rel="icon" href="/logo.svg" type="image/svg+xml" />
   <style>
     :root{ --pad: clamp(12px, 3vw, 22px); }
@@ -29,7 +20,6 @@
     .headerbar{display:grid;grid-template-columns:auto 1fr auto;align-items:center;margin-bottom:10px}
     .headerbar .center{justify-self:center;}
     .badge{display:inline-block;border:1px solid #2a2f37;border-radius:999px;padding:4px 10px;font-size:12px;max-width:50vw;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
-    /* TEAMS HERO */
     .teams{display:grid;grid-template-columns:1fr auto 1fr;gap:14px;align-items:center;justify-items:center;margin:10px 0 4px}
     .side{display:flex;flex-direction:column;align-items:center;gap:8px;text-align:center}
     .side img{width:clamp(56px,14vw,84px);height:clamp(56px,14vw,84px);object-fit:contain}
@@ -37,15 +27,12 @@
     .h1{font-size:clamp(22px,8vw,34px);font-weight:900;text-align:center;letter-spacing:.06em}
     .muted{opacity:.78}
     .statusBig{margin-top:6px;margin-bottom:2px;text-align:center}
-    /* Meta grid collapses gracefully */
     .meta{display:grid;grid-template-columns:repeat(3,minmax(0,1fr));gap:12px;margin:14px 0}
     @media(max-width:720px){ .meta{grid-template-columns:repeat(2,minmax(0,1fr));} }
-    /* Server buttons */
     .serverbar{ display:flex; flex-wrap:wrap; gap:10px; justify-content:center; margin:12px 0 4px; }
     .serverbar .sbtn{ display:inline-flex; align-items:center; justify-content:center; min-width:110px;
       border:1px solid #2a2f37; border-radius:12px; padding:10px 14px; text-decoration:none; color:#cbd5e1 }
     .serverbar .sbtn:hover{ background:#121821 }
-    /* Loading overlay */
     .loading{position:fixed;inset:0;display:flex;flex-direction:column;align-items:center;justify-content:center;background:rgba(3,8,14,.78);backdrop-filter:saturate(120%) blur(3px);z-index:50;transition:opacity .25s ease}
     .loading.hidden{opacity:0;pointer-events:none}
     .spinner{position:relative;width:74px;height:74px;margin-bottom:10px}
@@ -54,8 +41,8 @@
     .loadingText{font-size:14px;opacity:.9}
     @keyframes spin{to{transform:rotate(360deg)}}
     @keyframes pulse{0%,100%{transform:translate(-50%,-50%) scale(.85);opacity:.85}50%{transform:translate(-50%,-50%) scale(1.12);opacity:1}}
-    /* Hide league badge on narrow screens; full league is in meta */
     @media(max-width:600px){ #leagueBadge{display:none} }
+    .error{color:#ef4444}
   </style>
 </head>
 <body>
@@ -91,17 +78,42 @@
     <div><span class="muted small">Status</span><div id="state">-</div></div>
   </div>
 
-  <!-- Server buttons row -->
   <div id="serverBar" class="serverbar"></div>
+  <div id="err" class="error"></div>
 </main>
 
 <script>
+  // ======== never get stuck on spinner ========
+  function showError(msg){
+    const e = document.getElementById('err'); if(e){ e.textContent = msg || ''; }
+    const lo = document.getElementById('loadingOverlay'); if (lo) lo.classList.add('hidden');
+  }
+  window.addEventListener('error', () => showError('Could not load match data.'));
+
+  // ======== CONFIG ========
+  const API_KEY = 'kix-7d29f2d9ef3c4';
+  const API_BASE = './api';
+
+  // add API key in every common place (headers + query param) and include cookies
+  function apiFetch(url, init = {}) {
+    const u = new URL(url, location.href);
+    // add as query param fallback (some servers only check this)
+    u.searchParams.set('api_key', API_KEY);
+    const headers = Object.assign({}, init.headers || {}, {
+      'API_key': API_KEY,   // custom header (case-sensitive on some proxies)
+      'api_key': API_KEY,   // lowercase variant (Express lowercases header names)
+      'X-API-Key': API_KEY  // standard alt
+    });
+    return fetch(u.toString(), Object.assign({ credentials: 'include' }, init, { headers }));
+  }
+
+  // ======== UI helpers ========
   let __loadFailTimer = null;
-  function hideLoading(){ try{ document.getElementById('loadingOverlay').classList.add('hidden'); }catch{} if(__loadFailTimer){clearTimeout(__loadFailTimer);__loadFailTimer=null;} }
+  const $ = id => document.getElementById(id);
+  function hideLoading(){ try{ $('loadingOverlay').classList.add('hidden'); }catch{} if(__loadFailTimer){clearTimeout(__loadFailTimer);__loadFailTimer=null;} }
   function qs(name){ return new URLSearchParams(location.search).get(name) || ''; }
   function slug(s){ return String(s||'').toLowerCase().replace(/[^a-z0-9]+/g,'-').replace(/(^-|-$)/g,''); }
-  function capWords(s){ return String(s||'').split(/[-\s]+/).map(w => w? w[0].toUpperCase()+w.slice(1):'').join(' '); }
-  const $ = id => document.getElementById(id);
+  function capWords(s){ return String(s||'').split(/[-\\s]+/).map(w => w? w[0].toUpperCase()+w.slice(1):'').join(' '); }
 
   function renderServerButtonsFromSlug(sl){
     const bar = $('serverBar'); if (!bar) return;
@@ -115,7 +127,7 @@
     renderServerButtonsFromSlug(sl);
   }
 
-  // Prime: if the id already contains a slug part, prefill names & server buttons
+  // prefill names from slug in URL so UI looks alive even before data lands
   (function prime(){
     const id = qs('id');
     if (id && id.includes('@')){
@@ -129,17 +141,34 @@
     }
   })();
 
-  async function fixturesFor(dateStr){
-    const r = await fetch('/api/fixtures?date=' + encodeURIComponent(dateStr), {cache:'no-store'}).catch(()=>null);
-    const j = r ? await r.json().catch(()=>null) : null;
-    return Array.isArray(j?.fixtures) ? j.fixtures : [];
-  }
+  // ======== date helpers ========
   function ymdFromIso(x){ try{ return String(x||'').slice(0,10) || null; }catch{return null;} }
   function addDays(dateStr, delta){
     const dt = new Date(Date.UTC(+dateStr.slice(0,4), +dateStr.slice(5,7)-1, +dateStr.slice(8,10)));
     dt.setUTCDate(dt.getUTCDate()+delta);
     return dt.toISOString().slice(0,10);
   }
+
+  // ======== API helpers ========
+  function extractFixture(j){
+    if (!j) return null;
+    if (j.fixture) return j.fixture;
+    if (j.data && j.data.fixture) return j.data.fixture;
+    if (Array.isArray(j.fixtures) && j.fixtures.length===1) return j.fixtures[0];
+    if (Array.isArray(j.data?.fixtures) && j.data.fixtures.length===1) return j.data.fixtures[0];
+    return null;
+  }
+  async function fixturesFor(dateStr){
+    const r = await apiFetch(`${API_BASE}/fixtures?date=${encodeURIComponent(dateStr)}`, { cache: 'no-store' }).catch(() => null);
+    if (!r) return [];
+    if (!r.ok){
+      showError('API error ('+r.status+'): fixtures'); return [];
+    }
+    const j = await r.json().catch(()=>null);
+    const list = j?.fixtures || j?.data?.fixtures || [];
+    return Array.isArray(list) ? list : [];
+  }
+
   function tokens(name){
     const s = slug(name); const parts = s.split('-').filter(Boolean);
     const first = parts[0] || s, last = parts[parts.length-1] || s;
@@ -184,20 +213,37 @@
   }
 
   async function load(){
-    document.getElementById('loadingOverlay').classList.remove('hidden');
-    __loadFailTimer = setTimeout(hideLoading, 3000);
+    $('loadingOverlay').classList.remove('hidden');
+    __loadFailTimer = setTimeout(hideLoading, 4000);
 
     const id  = qs('id');
     if (!id){ $('statusLine').textContent='Missing match id'; hideLoading(); return; }
 
-    // Try server lookup quickly; if slow, do client-side scan
-    async function serverResolve(){ try{ const r = await fetch('/api/fixture/' + encodeURIComponent(id)); if (r.ok){ const j = await r.json(); return j.fixture || null; } }catch{} return null; }
+    async function serverResolve(){
+      try{
+        // try path param style
+        let r = await apiFetch(`${API_BASE}/fixture/${encodeURIComponent(id)}`);
+        if (!r.ok){
+          // try query param style
+          r = await apiFetch(`${API_BASE}/fixture?id=${encodeURIComponent(id)}`);
+        }
+        if (r.ok){
+          const j = await r.json().catch(()=>null);
+          return extractFixture(j);
+        } else {
+          showError('API error ('+r.status+'): fixture');
+        }
+      }catch(e){}
+      return null;
+    }
+
     async function clientResolve(){
       const hasAt = id.includes('@');
       const slugPart = slug(hasAt ? id.split('@')[0] : id);
       const isoHint  = hasAt ? id.split('@')[1] : null;
       const base = ymdFromIso(isoHint) || new Date().toISOString().slice(0,10);
-      const days = [addDays(base,-1), base, addDays(base,1), addDays(base,2)];
+      // search ±3 days just in case timezones shifted
+      const days = [ -3,-2,-1,0,1,2,3 ].map(n => addDays(base, n));
       for (const d of days){
         const list = await fixturesFor(d);
         const hit = list.find(fx => matchSlug(slugPart, fx));
