--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/styles.css?v=21" />
-<link rel="icon" href="/assets/logo.4e020dc4.svg" type="image/svg+xml" />
+<link rel="icon" href="/logo.svg" type="image/svg+xml" />
 <link rel="stylesheet" href="/scoreless.css">
 </head>
 
@@ -47,13 +47,13 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/styles.css?v=21" />
-<link rel="icon" href="/assets/logo.4e020dc4.svg" type="image/svg+xml" />
+<link rel="icon" href="/logo.svg" type="image/svg+xml" />
   <link rel="stylesheet" href="/scoreless.css">
 </head>
 <body>
 <header class="header">
   <div class="bar">
-    <a class="brand" href="/"><img src="/assets/logo.4e020dc4.svg" alt="Kixonair" height="28"/></a>
+    <a class="brand" href="/"><img src="/logo.svg" alt="Kixonair" height="28"/></a>
     <!-- Search bar sits outside the collapsible controls so it remains accessible on mobile -->
     <input id="q" type="text" placeholder="Search team…" aria-label="Search team"/>
     <!-- Mobile menu toggle button. Hidden on larger screens via CSS. -->
