--- a/public/public/watch.html
+++ b/public/public/watch.html
@@ -22,7 +22,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/styles.css?v=30" />
-  <link rel="icon" href="/assets/logo.4e020dc4.svg" type="image/svg+xml" />
+  <link rel="icon" href="/logo.svg" type="image/svg+xml" />
   <style>
     :root{ --pad: clamp(12px, 3vw, 22px); }
     .wrap{max-width:980px;margin:0 auto;padding:var(--pad)}
@@ -61,7 +61,7 @@
 <body>
 <header class="header">
   <div class="bar">
-    <a class="brand" href="/"><img src="/assets/logo.4e020dc4.svg" alt="Kixonair" height="28"/></a>
+    <a class="brand" href="/"><img src="/logo.svg" alt="Kixonair" height="28"/></a>
     <div style="flex:1"></div>
   </div>
 </header>
