--- a/public/watch.html
+++ b/public/watch.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="en">
 <head>
-<link rel="canonical" href="https://kixonair.com/"/>
   <script>
     (function () {
       var ok = ['kixonair.com', 'www.kixonair.com'];
@@ -13,7 +12,7 @@
   <meta name="theme-color" content="#0b0f14" />
   <title>Kixonair — Match Center</title>
   <link rel="stylesheet" href="/styles.css?v=34" />
-  <link rel="icon" href="/assets/logo.4e020dc4.svg" type="image/svg+xml" />
+  <link rel="icon" href="/logo.svg" type="image/svg+xml" />
   <style>
     :root{ --pad: clamp(12px, 3vw, 22px); }
     .wrap{max-width:980px;margin:0 auto;padding:var(--pad)}
@@ -47,7 +46,7 @@
 <body>
 <header class="header">
   <div class="bar">
-    <a class="brand" href="/"><img src="/assets/logo.4e020dc4.svg" alt="Kixonair" height="28"/></a>
+    <a class="brand" href="/"><img src="/logo.svg" alt="Kixonair" height="28"/></a>
     <div style="flex:1"></div>
   </div>
 </header>
