--- a/public/kixonair-index-v14-no-templates.html
+++ b/public/kixonair-index-v14-no-templates.html
@@ -23,13 +23,13 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/styles.css?v=13" />
 <!-- Use a relative path for the favicon to ensure it resolves when served locally or from file:// -->
-<link rel="icon" href="/assets/logo.4e020dc4.svg" type="image/svg+xml" />
+<link rel="icon" href="logo.svg" type="image/svg+xml" />
 </head>
 <body>
 <header class="header">
   <div class="bar">
     <!-- Updated to use the new logo. The relative path ensures the image loads when opened via file protocol. -->
-    <a class="brand brand--no-text" href="./"><img src="/assets/logo.4e020dc4.svg" alt="Kixonair" height="28"/></a>
+    <a class="brand brand--no-text" href="./"><img src="logo.svg" alt="Kixonair" height="28"/></a>
 
     <div class="controls">
       <input id="q" type="text" placeholder="Search team…" aria-label="Search team"/>
