--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,8 @@
       <div class="controls">
         <div class="filters" role="tablist">
           <button class="pill active" data-sport="all">All</button>
-          <button class="pill" data-sport="Football">Football</button>
+          <!-- Match our JS; soccer fixtures use the 'Soccer' sport key -->
+          <button class="pill" data-sport="Soccer">Football</button>
           <button class="pill" data-sport="NBA">NBA</button>
           <button class="pill" data-sport="NFL">NFL</button>
           <button class="pill" data-sport="NHL">NHL</button>
