--- a/public/public/watch.html
+++ b/public/public/watch.html
@@ -33,7 +33,7 @@
     .teams{display:grid;grid-template-columns:1fr auto 1fr;gap:14px;align-items:center;justify-items:center;margin:10px 0 4px}
     .side{display:flex;flex-direction:column;align-items:center;gap:8px;text-align:center}
     .side img{width:clamp(56px,14vw,84px);height:clamp(56px,14vw,84px);object-fit:contain}
-    .teamName{font-size:clamp(16px,4.5vw,22px);font-weight:700;line-height:1.2}
+    .teamName{font-size:clamp(16px,4.5vw,22px);font-weight:700;line-height:1.2;white-space:normal;overflow-wrap:anywhere}
     .h1{font-size:clamp(22px,8vw,34px);font-weight:900;text-align:center;letter-spacing:.06em}
     .muted{opacity:.78}
     .statusBig{margin-top:6px;margin-bottom:2px;text-align:center}
